force-app/main/default/objects/Project_Team__c/Project_Team__c.object-meta.xml
<CustomObject>
    <description>Purposed to store the project team members that will be working on the projects, the roles of each member and tracking of actions taken across the project by different members</description>
    <label>Project Team</label>
    <nameField>
        <label>Project Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>