force-app/main/default/objects/Project_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Various Roles available to define the role of each project member</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance Lead</fullName>
            </value>
            <value>
                <fullName>Document Owner</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>